# projeto_LP

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml
0_introducao/: index.html
1.1_projeto/: index.html
1.2_sobreBlockchain/: index.html
2.1_rust/: index.html
2.2_sobreRust/: index.html
3_construtores/: index.html
4_legibilidade/: index.html
5_escrita/: index.html
6_confiabilidade/: index.html
7_custo/: index.html
8_outros/: index.html
bibliografia/: index.html
docs/: 0_introducao.md  1.1_projeto.md  1.2_sobreBlockchain.md  1.2_sobreProjeto.md  1_porQueRust.md  1_pq_rust.md  1_sobreRust.md  2.1_rust.md  2.2_sobreRust.md  2_linguagem.md  2_pq_rust.md  2_sobreRust.md  3_construtores.md  3_legibilidade.md  4_legibilidade.md  5_confiabilidade.md  5_escrita.md  6_confiabilidade.md  6_custo.md  7_custo.md  8_outros.md  X_sobreProjeto.md  Y_sobreRust.md  bibliografia.md  confiabilidade.md  custo.md  escrita.md  index.md  legibilidade.md  lp.md  sobreRust.md
frontend/ladhub/: package-lock.json  package.json
frontend/ladhub/src/: App.css  App.js
frontend/ladhub/src/components/: OffersTable.css  OffersTable.js
frontend/src/: App.js
frontend/src/components/: Cadastro.js  Login.js
frontend/src/styles/: Cadastro.css  Login.css
search/: search_index.json
src/: blockchain.rs  client.rs  database.rs  lib.rs  main.rs  server.rs  transaction.rs  wallet.rs
src-tauri/: tauri.conf.json
src/utils/: mod.rs
wiki/: confiabiliade.md  custo.md  escrita.md  legibilidade.md  lp.md  sobreRust.md
