[package]
name = "blockchaincrypto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet"
path = "src/wallet.rs"

[[bin]]
name = "database"
path = "src/database.rs"

[[bin]]
name = "blockchain"
path = "src/blockchain.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
chrono = "0.4.38"
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
rand = "0.8"
actix-web = "4.0"
uuid = {version = "1.3.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
